# wordie

./: .gitignore  Cargo.toml  db.bat  docker-compose.yml  init-db.sql
resources/: story.txt
src/: core.rs  main.rs  srs.rs
src/srs/: anki.rs
wordie_app/: Cargo.toml
wordie_app/src/: main.rs
wordie_benchmark/: Cargo.toml  sentences.csv  sentences_100.csv
wordie_benchmark/src/: main.rs  sentences.rs
wordie_srs/: Cargo.toml
wordie_srs/src/: lib.rs  srs.rs
wordie_srs/src/srs/: anki.rs  wordie.rs
