[package]
name = "wordie_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.9.0"
egui = "0.19.0"
eframe = "0.19.0"
wordie_srs = { path = "../wordie_srs" }
uuid = { version = "1.1.2", features=["v4", "serde"] }
strum = "0.17.1"
